codea/oxout.output
Grammar

    0 $accept: yyyAugNonterm $end

    1 @1: /* empty */

    2 yyyAugNonterm: @1 program

    3 program: function program
    4        | /* empty */

    5 function: T_IDENTIFIER '(' parameters ')' stats T_END ';'

    6 parameters: T_IDENTIFIER ',' parameters
    7           | T_IDENTIFIER
    8           | /* empty */

    9 stats: labeldefinition stat ';' stats
   10      | stat ';' stats
   11      | /* empty */

   12 labeldefinition: labeldefinition T_IDENTIFIER ':'
   13                | T_IDENTIFIER ':'

   14 stat: T_RETURN expression
   15     | T_GOTO T_IDENTIFIER
   16     | T_IF expression T_THEN stats T_END
   17     | T_VAR T_IDENTIFIER '=' expression
   18     | T_IDENTIFIER '=' expression
   19     | T_MULT unary '=' expression
   20     | term

   21 expression: unary
   22           | add_expr
   23           | mult_expr
   24           | and_expr
   25           | term T_CMP_LE term
   26           | term '#' term

   27 add_expr: term T_PLUS term
   28         | term T_PLUS add_expr

   29 mult_expr: term T_MULT term
   30          | term T_MULT mult_expr

   31 and_expr: term T_AND term
   32         | term T_AND and_expr

   33 unary: T_NOT unary
   34      | T_MINUS unary
   35      | T_MULT unary
   36      | term

   37 term: '(' expression ')'
   38     | T_NUM
   39     | T_IDENTIFIER
   40     | T_IDENTIFIER '(' call_parameters ')'

   41 call_parameters: expression ',' call_parameters
   42                | expression
   43                | /* empty */


Terminals, with rules where they appear

$end (0) 0
'#' (35) 26
'(' (40) 5 37 40
')' (41) 5 37 40
',' (44) 6 41
':' (58) 12 13
';' (59) 5 9 10
'=' (61) 17 18 19
error (256)
T_PLUS (258) 27 28
T_MINUS (259) 34
T_MULT (260) 19 29 30 35
T_CMP_LE (261) 25
T_RETURN (262) 14
T_IF (263) 16
T_THEN (264) 16
T_GOTO (265) 15
T_VAR (266) 17
T_END (267) 5 16
T_NOT (268) 33
T_AND (269) 31 32
T_NUM (270) 38
T_IDENTIFIER (271) 5 6 7 12 13 15 17 18 39 40


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
yyyAugNonterm (25)
    on left: 2, on right: 0
@1 (26)
    on left: 1, on right: 2
program (27)
    on left: 3 4, on right: 2 3
function (28)
    on left: 5, on right: 3
parameters (29)
    on left: 6 7 8, on right: 5 6
stats (30)
    on left: 9 10 11, on right: 5 9 10 16
labeldefinition (31)
    on left: 12 13, on right: 9 12
stat (32)
    on left: 14 15 16 17 18 19 20, on right: 9 10
expression (33)
    on left: 21 22 23 24 25 26, on right: 14 16 17 18 19 37 41 42
add_expr (34)
    on left: 27 28, on right: 22 28
mult_expr (35)
    on left: 29 30, on right: 23 30
and_expr (36)
    on left: 31 32, on right: 24 32
unary (37)
    on left: 33 34 35 36, on right: 19 21 33 34 35
term (38)
    on left: 37 38 39 40, on right: 20 25 26 27 28 29 30 31 32 36
call_parameters (39)
    on left: 41 42 43, on right: 40 41


state 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 1 (@1)

    yyyAugNonterm  go to state 1
    @1             go to state 2


state 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 3


state 2

    2 yyyAugNonterm: @1 . program

    T_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 4 (program)

    program   go to state 5
    function  go to state 6


state 3

    0 $accept: yyyAugNonterm $end .

    $default  accept


state 4

    5 function: T_IDENTIFIER . '(' parameters ')' stats T_END ';'

    '('  shift, and go to state 7


state 5

    2 yyyAugNonterm: @1 program .

    $default  reduce using rule 2 (yyyAugNonterm)


state 6

    3 program: function . program

    T_IDENTIFIER  shift, and go to state 4

    $default  reduce using rule 4 (program)

    program   go to state 8
    function  go to state 6


state 7

    5 function: T_IDENTIFIER '(' . parameters ')' stats T_END ';'

    T_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 8 (parameters)

    parameters  go to state 10


state 8

    3 program: function program .

    $default  reduce using rule 3 (program)


state 9

    6 parameters: T_IDENTIFIER . ',' parameters
    7           | T_IDENTIFIER .

    ','  shift, and go to state 11

    $default  reduce using rule 7 (parameters)


state 10

    5 function: T_IDENTIFIER '(' parameters . ')' stats T_END ';'

    ')'  shift, and go to state 12


state 11

    6 parameters: T_IDENTIFIER ',' . parameters

    T_IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 8 (parameters)

    parameters  go to state 13


state 12

    5 function: T_IDENTIFIER '(' parameters ')' . stats T_END ';'

    T_MULT        shift, and go to state 14
    T_RETURN      shift, and go to state 15
    T_IF          shift, and go to state 16
    T_GOTO        shift, and go to state 17
    T_VAR         shift, and go to state 18
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 11 (stats)

    stats            go to state 22
    labeldefinition  go to state 23
    stat             go to state 24
    term             go to state 25


state 13

    6 parameters: T_IDENTIFIER ',' parameters .

    $default  reduce using rule 6 (parameters)


state 14

   19 stat: T_MULT . unary '=' expression

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    unary  go to state 30
    term   go to state 31


state 15

   14 stat: T_RETURN . expression

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 32
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 16

   16 stat: T_IF . expression T_THEN stats T_END

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 38
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 17

   15 stat: T_GOTO . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 39


state 18

   17 stat: T_VAR . T_IDENTIFIER '=' expression

    T_IDENTIFIER  shift, and go to state 40


state 19

   38 term: T_NUM .

    $default  reduce using rule 38 (term)


state 20

   13 labeldefinition: T_IDENTIFIER . ':'
   18 stat: T_IDENTIFIER . '=' expression
   39 term: T_IDENTIFIER .
   40     | T_IDENTIFIER . '(' call_parameters ')'

    '('  shift, and go to state 41
    ':'  shift, and go to state 42
    '='  shift, and go to state 43

    $default  reduce using rule 39 (term)


state 21

   37 term: '(' . expression ')'

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 44
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 22

    5 function: T_IDENTIFIER '(' parameters ')' stats . T_END ';'

    T_END  shift, and go to state 45


state 23

    9 stats: labeldefinition . stat ';' stats
   12 labeldefinition: labeldefinition . T_IDENTIFIER ':'

    T_MULT        shift, and go to state 14
    T_RETURN      shift, and go to state 15
    T_IF          shift, and go to state 16
    T_GOTO        shift, and go to state 17
    T_VAR         shift, and go to state 18
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 46
    '('           shift, and go to state 21

    stat  go to state 47
    term  go to state 25


state 24

   10 stats: stat . ';' stats

    ';'  shift, and go to state 48


state 25

   20 stat: term .

    $default  reduce using rule 20 (stat)


state 26

   34 unary: T_MINUS . unary

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    unary  go to state 49
    term   go to state 31


state 27

   35 unary: T_MULT . unary

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    unary  go to state 50
    term   go to state 31


state 28

   33 unary: T_NOT . unary

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    unary  go to state 51
    term   go to state 31


state 29

   39 term: T_IDENTIFIER .
   40     | T_IDENTIFIER . '(' call_parameters ')'

    '('  shift, and go to state 41

    $default  reduce using rule 39 (term)


state 30

   19 stat: T_MULT unary . '=' expression

    '='  shift, and go to state 52


state 31

   36 unary: term .

    $default  reduce using rule 36 (unary)


state 32

   14 stat: T_RETURN expression .

    $default  reduce using rule 14 (stat)


state 33

   22 expression: add_expr .

    $default  reduce using rule 22 (expression)


state 34

   23 expression: mult_expr .

    $default  reduce using rule 23 (expression)


state 35

   24 expression: and_expr .

    $default  reduce using rule 24 (expression)


state 36

   21 expression: unary .

    $default  reduce using rule 21 (expression)


state 37

   25 expression: term . T_CMP_LE term
   26           | term . '#' term
   27 add_expr: term . T_PLUS term
   28         | term . T_PLUS add_expr
   29 mult_expr: term . T_MULT term
   30          | term . T_MULT mult_expr
   31 and_expr: term . T_AND term
   32         | term . T_AND and_expr
   36 unary: term .

    T_PLUS    shift, and go to state 53
    T_MULT    shift, and go to state 54
    T_CMP_LE  shift, and go to state 55
    T_AND     shift, and go to state 56
    '#'       shift, and go to state 57

    $default  reduce using rule 36 (unary)


state 38

   16 stat: T_IF expression . T_THEN stats T_END

    T_THEN  shift, and go to state 58


state 39

   15 stat: T_GOTO T_IDENTIFIER .

    $default  reduce using rule 15 (stat)


state 40

   17 stat: T_VAR T_IDENTIFIER . '=' expression

    '='  shift, and go to state 59


state 41

   40 term: T_IDENTIFIER '(' . call_parameters ')'

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    $default  reduce using rule 43 (call_parameters)

    expression       go to state 60
    add_expr         go to state 33
    mult_expr        go to state 34
    and_expr         go to state 35
    unary            go to state 36
    term             go to state 37
    call_parameters  go to state 61


state 42

   13 labeldefinition: T_IDENTIFIER ':' .

    $default  reduce using rule 13 (labeldefinition)


state 43

   18 stat: T_IDENTIFIER '=' . expression

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 62
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 44

   37 term: '(' expression . ')'

    ')'  shift, and go to state 63


state 45

    5 function: T_IDENTIFIER '(' parameters ')' stats T_END . ';'

    ';'  shift, and go to state 64


state 46

   12 labeldefinition: labeldefinition T_IDENTIFIER . ':'
   18 stat: T_IDENTIFIER . '=' expression
   39 term: T_IDENTIFIER .
   40     | T_IDENTIFIER . '(' call_parameters ')'

    '('  shift, and go to state 41
    ':'  shift, and go to state 65
    '='  shift, and go to state 43

    $default  reduce using rule 39 (term)


state 47

    9 stats: labeldefinition stat . ';' stats

    ';'  shift, and go to state 66


state 48

   10 stats: stat ';' . stats

    T_MULT        shift, and go to state 14
    T_RETURN      shift, and go to state 15
    T_IF          shift, and go to state 16
    T_GOTO        shift, and go to state 17
    T_VAR         shift, and go to state 18
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 11 (stats)

    stats            go to state 67
    labeldefinition  go to state 23
    stat             go to state 24
    term             go to state 25


state 49

   34 unary: T_MINUS unary .

    $default  reduce using rule 34 (unary)


state 50

   35 unary: T_MULT unary .

    $default  reduce using rule 35 (unary)


state 51

   33 unary: T_NOT unary .

    $default  reduce using rule 33 (unary)


state 52

   19 stat: T_MULT unary '=' . expression

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 68
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 53

   27 add_expr: term T_PLUS . term
   28         | term T_PLUS . add_expr

    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    add_expr  go to state 69
    term      go to state 70


state 54

   29 mult_expr: term T_MULT . term
   30          | term T_MULT . mult_expr

    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    mult_expr  go to state 71
    term       go to state 72


state 55

   25 expression: term T_CMP_LE . term

    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    term  go to state 73


state 56

   31 and_expr: term T_AND . term
   32         | term T_AND . and_expr

    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    and_expr  go to state 74
    term      go to state 75


state 57

   26 expression: term '#' . term

    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    term  go to state 76


state 58

   16 stat: T_IF expression T_THEN . stats T_END

    T_MULT        shift, and go to state 14
    T_RETURN      shift, and go to state 15
    T_IF          shift, and go to state 16
    T_GOTO        shift, and go to state 17
    T_VAR         shift, and go to state 18
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 11 (stats)

    stats            go to state 77
    labeldefinition  go to state 23
    stat             go to state 24
    term             go to state 25


state 59

   17 stat: T_VAR T_IDENTIFIER '=' . expression

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    expression  go to state 78
    add_expr    go to state 33
    mult_expr   go to state 34
    and_expr    go to state 35
    unary       go to state 36
    term        go to state 37


state 60

   41 call_parameters: expression . ',' call_parameters
   42                | expression .

    ','  shift, and go to state 79

    $default  reduce using rule 42 (call_parameters)


state 61

   40 term: T_IDENTIFIER '(' call_parameters . ')'

    ')'  shift, and go to state 80


state 62

   18 stat: T_IDENTIFIER '=' expression .

    $default  reduce using rule 18 (stat)


state 63

   37 term: '(' expression ')' .

    $default  reduce using rule 37 (term)


state 64

    5 function: T_IDENTIFIER '(' parameters ')' stats T_END ';' .

    $default  reduce using rule 5 (function)


state 65

   12 labeldefinition: labeldefinition T_IDENTIFIER ':' .

    $default  reduce using rule 12 (labeldefinition)


state 66

    9 stats: labeldefinition stat ';' . stats

    T_MULT        shift, and go to state 14
    T_RETURN      shift, and go to state 15
    T_IF          shift, and go to state 16
    T_GOTO        shift, and go to state 17
    T_VAR         shift, and go to state 18
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 11 (stats)

    stats            go to state 81
    labeldefinition  go to state 23
    stat             go to state 24
    term             go to state 25


state 67

   10 stats: stat ';' stats .

    $default  reduce using rule 10 (stats)


state 68

   19 stat: T_MULT unary '=' expression .

    $default  reduce using rule 19 (stat)


state 69

   28 add_expr: term T_PLUS add_expr .

    $default  reduce using rule 28 (add_expr)


state 70

   27 add_expr: term . T_PLUS term
   27         | term T_PLUS term .
   28         | term . T_PLUS add_expr

    T_PLUS  shift, and go to state 53

    $default  reduce using rule 27 (add_expr)


state 71

   30 mult_expr: term T_MULT mult_expr .

    $default  reduce using rule 30 (mult_expr)


state 72

   29 mult_expr: term . T_MULT term
   29          | term T_MULT term .
   30          | term . T_MULT mult_expr

    T_MULT  shift, and go to state 54

    $default  reduce using rule 29 (mult_expr)


state 73

   25 expression: term T_CMP_LE term .

    $default  reduce using rule 25 (expression)


state 74

   32 and_expr: term T_AND and_expr .

    $default  reduce using rule 32 (and_expr)


state 75

   31 and_expr: term . T_AND term
   31         | term T_AND term .
   32         | term . T_AND and_expr

    T_AND  shift, and go to state 56

    $default  reduce using rule 31 (and_expr)


state 76

   26 expression: term '#' term .

    $default  reduce using rule 26 (expression)


state 77

   16 stat: T_IF expression T_THEN stats . T_END

    T_END  shift, and go to state 82


state 78

   17 stat: T_VAR T_IDENTIFIER '=' expression .

    $default  reduce using rule 17 (stat)


state 79

   41 call_parameters: expression ',' . call_parameters

    T_MINUS       shift, and go to state 26
    T_MULT        shift, and go to state 27
    T_NOT         shift, and go to state 28
    T_NUM         shift, and go to state 19
    T_IDENTIFIER  shift, and go to state 29
    '('           shift, and go to state 21

    $default  reduce using rule 43 (call_parameters)

    expression       go to state 60
    add_expr         go to state 33
    mult_expr        go to state 34
    and_expr         go to state 35
    unary            go to state 36
    term             go to state 37
    call_parameters  go to state 83


state 80

   40 term: T_IDENTIFIER '(' call_parameters ')' .

    $default  reduce using rule 40 (term)


state 81

    9 stats: labeldefinition stat ';' stats .

    $default  reduce using rule 9 (stats)


state 82

   16 stat: T_IF expression T_THEN stats T_END .

    $default  reduce using rule 16 (stat)


state 83

   41 call_parameters: expression ',' call_parameters .

    $default  reduce using rule 41 (call_parameters)
